# dataeng-container-tools

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  README.md  mkdocs.yml  pyproject.toml  setup.py
.github/: release-drafter.yaml
.github/workflows/: CI.yml  build-all-tags.yaml  build-tag.yaml  ci.yaml  deploy-cloudrun.yaml  docs-deploy.yaml  release-drafter.yaml  update-major-minor-tags.yaml
crates/dect/: Cargo.toml
crates/dect/src/: args.rs  main.rs
crates/dect/src/args_md/: argparse_md.rs  mod.rs
crates/dect/src/docker/: build.rs  mod.rs  test.rs
dataeng_container_tools/: __init__.py  cla.py  container_utils.py  log_utils.py  safe_textio.py  secrets_manager.py
dataeng_container_tools/modules/: __init__.py  base_module.py
dataeng_container_tools/modules/datastore/: __init__.py  datastore.py
dataeng_container_tools/modules/download/: __init__.py  download.py
dataeng_container_tools/modules/ds/: __init__.py  ds.py
dataeng_container_tools/modules/gcs/: __init__.py  gcs.py
dataeng_container_tools/modules/sf/: __init__.py  sf.py
dataeng_container_tools/modules/snowflake/: __init__.py  sf.py
dev/: 404.html  gen_ref_pages.py  index.html  objects.inv  sitemap.xml
dev/contributing/: index.html
dev/contributing/creating-modules/: index.html
dev/contributing/standards/: index.html
dev/example-demos/: index.html
dev/example-demos/basic/: index.html
dev/installation/: index.html
dev/introduction/: index.html
dev/migration-guides/: index.html
dev/migration-guides/migration-1.0.0/: index.html
dev/modules/: index.html
dev/modules/command-line/: index.html
dev/modules/container-utils/: index.html
dev/modules/datastore-operations/: index.html
dev/modules/downloader/: index.html
dev/modules/gcs-operations/: index.html
dev/modules/secrets-handling/: index.html
dev/modules/snowflake/: index.html
dev/reference/SUMMARY/: index.html
dev/reference/dataeng_container_tools/: index.html
dev/reference/dataeng_container_tools/cla/: index.html
dev/reference/dataeng_container_tools/container_utils/: index.html
dev/reference/dataeng_container_tools/log_utils/: index.html
dev/reference/dataeng_container_tools/modules/: index.html
dev/reference/dataeng_container_tools/modules/base_module/: index.html
dev/reference/dataeng_container_tools/modules/datastore/: index.html
dev/reference/dataeng_container_tools/modules/datastore/datastore/: index.html
dev/reference/dataeng_container_tools/modules/download/: index.html
dev/reference/dataeng_container_tools/modules/download/download/: index.html
dev/reference/dataeng_container_tools/modules/gcs/: index.html
dev/reference/dataeng_container_tools/modules/gcs/gcs/: index.html
dev/reference/dataeng_container_tools/modules/snowflake/: index.html
dev/reference/dataeng_container_tools/modules/snowflake/sf/: index.html
dev/reference/dataeng_container_tools/safe_textio/: index.html
dev/reference/dataeng_container_tools/secrets_manager/: index.html
dev/search/: search_index.json
docs/: conf.py  index.md  index.rst  installation.md  introduction.md  make.py  root.html
docs/contributing/: creating-modules.md  index.md  standards.md  standards.rst
docs/example-demos/: basic.md  basic.rst  index.md
docs/migration-guides/: index.md  migration-1.0.0.md  migration-1.0.0.rst
docs/modules/: command-line.md  container-utils.md  container-utils.rst  datastore-operations.md  downloader.md  downloader.rst  gcs-operations.md  gcs-operations.rst  index.md  index.rst  secrets-handling.md  snowflake.md
docs/src/: conf.py  installation.rst  introduction.rst
docs/src/_static/: custom-version-switcher.js  custom.css
docs/src/_templates/sidebar/: versions.html
docs/src/contributing/: creating-modules.rst  standards.rst
docs/src/example-demos/: basic.rst  index.rst
docs/src/migration-guides/: migration-1.0.0.rst
docs/src/modules/: command-line.rst  datastore-operations.rst  index.rst  snowflake.rst
tests/: README.md  __init__.py  conftest.py
tests/cla/: __init__.py  test_cla_input_output_uris.py  test_cla_tags.py  test_cla_type.py  test_custom_cla.py
tests/cla/mock_files/: __init__.py  custom_cla.py
tests/download/: __init__.py  test_download_to_file.py
tests/gcs/: __init__.py  conftest.py  test_gcs_download.py  test_gcs_mixed.py  test_gcs_upload.py
tests/gcs/_helper/: testbench_waitress.py
tests/safe_textio/: test_safe_textio.py
tests/safe_textio/mock_files/vault/secrets/: db_credentials.json
tests/snowflake/: conftest.py
tests/test_cla/: test_cla_input_output_uris.py  test_cla_secret_locations.py  test_cla_tags.py  test_custom_cla.py
tests/test_cla/mock_files/: custom_cla.py  input_output.py  required_optional_unused.py  secret_locations.py  tags.py
tests/test_gcs/: conftest.py  test_gcs_download.py  test_gcs_download_polars.py  test_gcs_mixed_polars.py  test_gcs_upload.py  test_gcs_upload_polars.py  test_gcs_utils.py
tests/test_gcs/_helper/: testbench_run.py
tests/test_safe_textio/: __init__.py
tests/test_safe_textio/mock_files/vault/secrets/: api-key.json
tests/test_snowflake/: __init__.py  test_execute.py
