[project]
name = "dataeng-container-tools"
dynamic = ["version"]
description = "A package containing tools for data engineering containers."
readme = "README.md"
maintainers = [
    { name = "CP DE Team", email = "git_data_science_engineering@colpal.com" },
]
dependencies = [
    "psutil>=7.0.0",
    "openpyxl>=3.1.5",
    "pyarrow>=21.0.0",
    "pandas>=2.3.2,<3.0.0",
    "google-cloud-storage>=3.3.1",
    "google-cloud-datastore>=2.21.0",
    "snowflake-connector-python>=3.17.3",
]
requires-python = ">=3.9"
license = { text = "MIT License" }
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://github.com/colpal/dataEng-container-tools"
download = "https://github.com/colpal/dataEng-container-tools/releases"
tracker = "https://github.com/colpal/dataEng-container-tools/issues"

[dependency-groups]
dev = [
    # Ruff
    "ruff==0.11.8",

    # Type stubs
    "types-setuptools",
    "types-psutil==7.0.0.20250601",
    "types-requests==2.31.0.6",
    "pandas-stubs==2.2.2.240807",

    # Test
    "pytest==8.3.5",
    "pytest-cov==6.1.1",
    "requests-mock==1.12.1",
    "fakesnow[server]==0.9.41",
    "googleapis-storage-testbench @ git+https://github.com/googleapis/storage-testbench@1c8f6306bf9969b7b86d09da9ac0fe61c79682b1", # v0.54.0 No official pip package yet
]

[build-system]
requires = ["setuptools>=42", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["dataeng_container_tools"]

[tool.setuptools_scm]

[tool.ruff]
line-length = 120
target-version = "py39"

[tool.ruff.lint]
select = ["ALL"]
exclude = [".git", ".vscode", ".venv", "__pycache__", ".eggs", "build", "dist"]
# Disable `typing_extensions` imports. Causes issues in Python 3.9
typing-extensions = false

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pylint]
max-args = 15
max-branches = 20
max-statements = 75
max-returns = 15

[tool.ruff.lint.mccabe]
max-complexity = 20

[tool.ruff.lint.extend-per-file-ignores]
"tests/**/*.py" = [
    # https://github.com/astral-sh/ruff/issues/4368
    "S101", # asserts allowed in tests...
    "ARG",  # Unused function args -> fixtures nevertheless are functionally relevant...
    "FBT",  # Don't care about booleans as positional arguments in tests, e.g. via @pytest.mark.parametrize()
    # The below are debateable
    "PLR2004", # Magic value used in comparison, ...
    "S311",    # Standard pseudo-random generators are not suitable for cryptographic purposes

    "S603",   # Subprocess
    "SLF001", # Private member access
]

[tool.pyright]
pythonVersion = "3.9"
typeCheckingMode = "standard"
