[package]
name = "dect"
version = { workspace = true }
publish = true
authors = { workspace = true }
edition = { workspace = true }
rust-version = { workspace = true }
homepage = { workspace = true }
documentation = { workspace = true }
repository = { workspace = true }
license = { workspace = true }
readme = "../../README.md"
default-run = "dect"

[[bin]]
name = "dect"
path = "src/main.rs"

[dependencies]
bollard = { version = "0.19.3", features = ["buildkit_providerless"] }
bytes = "1.10.1"
clap = { version = "4.5.51", features = ["derive"] }
flate2 = "1.1.5"
futures-util = "0.3.31"
http-body-util = "0.1"
hyper = "1.5"
regex = "1.12.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.145"
tar = "0.4.44"
termion = "4.0.5"
tokio = { version = "1.48.0", features = ["full", "macros", "rt-multi-thread"] }
uuid = { version = "1.18.1", features = ["v4"] }
